Enable using locale in parser to detect numbers

BUG: 426442
FIXED-N: 2.8.1